# rage

./: .env.example  .env.smoke.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
agent_reports/: 2026-06-11_phase-0_ticket-001_repo-scaffold-model-runtime.md  2026-06-11_phase-1_ticket-006_sqlite-migration-source-ingestion.md  2026-06-11_phase-1_ticket-007_mock-claim-extraction.md  2026-06-11_phase-1_ticket-008_mock-concept-linking.md  2026-06-11_phase-1_ticket-009_mock-relationship-builder.md  2026-06-11_phase-1_ticket-010_score-reconciliation.md  2026-06-11_phase-1_ticket-011_mock-contradiction-detection.md  2026-06-11_phase-1_ticket-012_mock-research-queue.md  2026-06-11_phase-1_ticket-013_research-contract-drift.md  2026-06-11_phase-1_ticket-014_public-card-export.md  2026-06-11_pre-ticket-009_relationship-builder-readiness-audit.md  2026-06-11_pre-ticket-011_contradiction-readiness-audit.md  2026-06-12_live-probe-evidence-review.md  2026-06-12_phase-1_ticket-015_public-site-detail-pages.md  2026-06-12_phase-1_ticket-016_cluster-report.md  2026-06-12_phase-1_ticket-017_theory-generator.md  2026-06-12_phase-1_ticket-018_question-generation.md  2026-06-12_phase-1_ticket-019_ontology-pressure.md  2026-06-12_phase-1_ticket-020_domain-proposal.md  2026-06-12_phase-1_ticket-021_run-report.md  2026-06-12_phase-1_ticket-022_improvement-tickets.md  2026-06-12_phase-1_ticket-023_builder-ticket-consumption.md  2026-06-12_phase-1_ticket-024_builder-golden-gate.md  2026-06-12_phase-1_ticket-025_safety-audit-gate.md  (+734 more)
fixtures/: manual_source_fixture_map.json
(+984 files in other folders)
