[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rge"
version = "0.1.0"
description = "Research Graph Engine: local-first research infrastructure that turns sources into a traceable claim graph."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
research = "rge.cli:main"

[tool.setuptools.packages.find]
include = ["rge*"]

[tool.setuptools.package-data]
"rge.db" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
